--- a/src/css/bootsnav.css
+++ b/src/css/bootsnav.css
@@ -34,7 +34,7 @@ nav.navbar.bootsnav{
     -webkit-border-radius: 0px;
     -o-border-radius: 0px;
     border-radius: 0px;
-    background-color: #fff;
+    background-color: #e8e8e8;
     border: none;
     border-bottom: solid 1px #e0e0e0;
     z-index: 9;
