--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,3 @@
-
-/*==================================
-font-family: 'Roboto', sans-serif;
-==================================== */
-
-
 /*=========== TABLE OF CONTENTS ===========
 1.  General css (Reset code)
 2.  Top-area
@@ -105,11 +99,14 @@ font-family: 'Roboto', sans-serif;
   /*-------------------------------------
 		2. Top-area
   --------------------------------------*/
-  nav.navbar.bootsnav {
-	background-color: transparent;
-	border-bottom: transparent;
-  }
-  .wrap-sticky nav.navbar.bootsnav.sticked {background-color: #fff;box-shadow: 0 2px 5px rgba(0,0,0,.2);}
+  .top-area {
+    position: sticky;
+    top: 0;
+    left: 0;
+    width: 100%;
+	z-index: 9999;
+}
+
   /*.navbar-brand*/
   .navbar-header a.navbar-brand,.navbar-header a.navbar-brand:hover,.navbar-header a.navbar-brand:focus {
 	display: inline-block;
@@ -145,13 +142,7 @@ font-family: 'Roboto', sans-serif;
   nav.navbar.bootsnav ul.nav > li > a:hover,nav.navbar.bootsnav ul.nav > li > a:focus{color: #e99c2e;}
   nav.navbar.bootsnav ul.nav > li.active>a {color: #e99c2e;}
   
-  nav.navbar.bootsnav ul.nav > li.dropdown > a.dropdown-toggle:after {
-	content: "";
-  }
-  nav.navbar.bootsnav ul.nav > li.dropdown span {
-	font-size: 8px;
-	margin-left: 15px;
-  }
+
   .wrap-sticky nav.navbar.bootsnav.sticked ul.nav > li > a{padding:30px 25px;}
   /*.nav li*/
   
@@ -210,76 +201,7 @@ font-family: 'Roboto', sans-serif;
   
   
   /*.cart-list*/
-  ul.dropdown-menu.cart-list {
-	height: 232px;
-	overflow-y: scroll;
-	border-radius: 3px;
-  }
-  ul.cart-list > li img {
-	width: 50px;
-	height: 50px;
-	border:transparent;
-  }
-  .s-cate::-webkit-scrollbar {width:5px;}
-  .s-cate::-webkit-scrollbar-track {-webkit-box-shadow: inset 0 0 8px #000;}
-  .s-cate::-webkit-scrollbar-thumb {background-color: #e99c2e;}
-  
-  .single-cart-list {
-	position: relative;
-	display: flex;
-  }
-  ul.cart-list > li {
-	border-bottom: solid 1px #ebebeb;
-	padding: 20px !important;
-  }
-  ul.cart-list > li:last-child{border-bottom: 0;}
-  .attr-nav ul.cart-list > li > a:hover{border-left:2px solid transparent!important;}
-  .dropdown-menu.cart-list h6 a {
-	color: #43465d;
-	font-size: 12px;
-	line-height: 1.3;
-  }
-  .cart-list-txt p {
-	font-size: 12px;
-	font-weight: 300;
-	line-height: 1.8;
-  }
-  ul.cart-list > li .price {font-weight: 300;}
-  .cart-close {
-	position: absolute;
-	top: 10px;
-	right: 14px;
-	cursor: pointer;
-  }
-  ul.cart-list > li.total > span {
-	padding-top: 0px;
-	position: relative;
-	top: 4px;
-  }
-  ul.cart-list > li.total span {
-	color: #43465d;
-	font-size: 14px;
-	font-weight: 500;
-  }
-  ul.cart-list > li.total {
-	background-color: #fff;
-	padding-bottom:20px !important;
-  }
-  .btn-cart{
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	background: #e99c2e;
-	border: 1px solid #e99c2e;
-	width: 80px;
-	height: 30px;
-	white-space: nowrap;
-	color: #fff;
-	font-size: 12px;
-	font-weight: 500;
-	text-transform: capitalize;
-	border-radius: 3px;
-  }
+
   /*.cart-list*/
   
   /*.packages-price */
@@ -382,16 +304,18 @@ font-family: 'Roboto', sans-serif;
   .fullscreen-image {
 	position: relative!;
 	width: 100%!;
-	height: 100vh!;
+	height: 90vh!;
 	display: flex!;
 	justify-content: center!;
 	align-items: center!;
 	z-index: 1!;
 	overflow: hidden!;
+	padding-top: -70.8px;
   }
   
   .fullscreen-image img {
 	position: absolute!;
+
 	top: 0!;
 	left: 0!;
 	width: 100%!;
@@ -415,11 +339,21 @@ font-family: 'Roboto', sans-serif;
   /*-------------------------------------
 		5. New-arrivals 
   --------------------------------------*/
-  .new-arrivals {padding:85px 0 70px;}
-  .new-arrivals-content{margin-top: 80px;}
-  
-  .single-new-arrival{margin-bottom: 50px;text-align: center;}
-  .single-new-arrival-bg {
+  .catalog {padding:85px 0 70px;}
+.catalog-content{margin-top: 80px;}
+
+.row {
+	display: flex;
+	flex-flow: row wrap;
+	justify-content: center;
+	align-items: center!important;
+  }
+
+.single-item {
+	margin-bottom: 50px;
+	text-align: center;
+}
+.single-item-bg {
 	position: relative;
 	min-height: 310px;
 	background: #f8f9fc;
@@ -427,8 +361,8 @@ font-family: 'Roboto', sans-serif;
 	align-items: center;
 	justify-content:center;
 	overflow:hidden;
-  }
-  .single-new-arrival-bg img{
+}
+.single-item-bg img{
 	width:auto;
 	height:auto;
 	-webkit-transition: .3s linear;
@@ -436,15 +370,15 @@ font-family: 'Roboto', sans-serif;
 	-ms-transition: .3s linear;
 	-o-transition: .3s linear;
 	transition: .3s linear;
-  }
-  .single-new-arrival-bg:hover  img{
+}
+.single-item-bg:hover img{
 	-webkit-transform:scale(1.3);
 	-moz-transform:scale(1.3);
 	-ms-transform:scale(1.3);
 	-o-transform:scale(1.3);
 	transform:scale(1.3);
-  }
-  .single-new-arrival-bg-overlay{
+}
+.single-item-bg-overlay{
 	position: absolute;
 	content: "";
 	top: 0;
@@ -462,15 +396,15 @@ font-family: 'Roboto', sans-serif;
 	-ms-transition: .3s linear;
 	-o-transition: .3s linear;
 	transition: .3s linear;
-  }
-  .single-new-arrival-bg:hover .single-new-arrival-bg-overlay{
+}
+.single-item-bg:hover .single-catalog-bg-overlay{
 	-webkit-transform:scale(1);
 	-moz-transform:scale(1);
 	-ms-transform:scale(1);
 	-o-transform:scale(1);
 	transform:scale(1);
-  }
-  .sale {
+}
+.sale {
 	position: absolute;
 	top: 10px;
 	right: 0;
@@ -478,115 +412,32 @@ font-family: 'Roboto', sans-serif;
 	height: 30px;
 	line-height: 30px;
 	text-align: center;
-  }
-  .sale p{color: #fff;font-weight: 500;font-size:14px;line-height: 2.2;}
-  
-  .sale.bg-1{background: #d8924c;}
-  .sale.bg-2{background: #47d93c;}
-  
-  .new-arrival-cart {
-	position: absolute;
-	bottom: -14px;
-	z-index: 0;
-	left: 0;
-	width: 100%;
-	height: 35px;
-	background: #33383c;
-	-webkit-transition: .3s linear;
-	-moz-transition: .3s linear;
-	-ms-transition: .3s linear;
-	-o-transition: .3s linear;
-	transition: .3s linear;
-	opacity:0;
-	visibility:hidden;
-  }
-  .new-arrival-cart p {
-	float: left;
-	margin-left: 20px;
-	color: #fff;
-	font-size: 12px;
-	line-height: 3;
-  }
-  .new-arrival-cart p a{color: #fff;font-weight: 400;font-size: 12px;}
-  .new-arrival-cart p span.lnr.lnr-cart {margin-right: 10px;}
-  .new-arrival-cart p span{text-transform: lowercase;}
-  p.arrival-review span {margin-right: 15px;}
-  .single-new-arrival-bg:hover .new-arrival-cart {
+}
+.sale p{color: #fff;font-weight: 500;font-size:14px;line-height: 2.2;}
+
+.sale.bg-1{background: #d8924c;}
+.sale.bg-2{background: #47d93c;}
+
+
+
+.single-item-bg:hover {
 	opacity:1;
 	visibility:visible;
 	bottom:0px;
-  }
-  .single-new-arrival  h4 a{
-	color:#5f5b57;
+}
+.single-item  h4 a{
+	color:#000000;
 	font-size:16px;
-	font-weight:500;
+	font-weight:600;
 	margin:26px 0 12px;
-  }
-  .arrival-product-price{
-	color:#5f5b57;
+}
+  .item-product-price{
+	color:#3b3632;
 	font-size: 16px;
-	font-weight: 400;
+	font-weight: 800;
   }
-  .single-new-arrival:hover h4 a{color:#e99c2e;}
+  .single-item:hover h4 a{color:#e99c2e;}
   
-  /*-------------------------------------
-		6. Sofa-coolection
-  --------------------------------------*/
-  #sofa-collection {
-	position: relative;
-	z-index: -1;
-  }
-  .sofa-collection{
-	position: relative;
-	display: flex;
-	align-items: center;
-	height: 600px;
-	background-position: center;
-	background-size: cover;
-  }
-  .sofa-collection.collectionbg1{background: url(C:\Users\Vadym\Desktop\furn-master\frontend\src\assets\images\collection\sofa-collection-banner.jpg)no-repeat;}
-  .sofa-collection.collectionbg2{background: url(C:\Users\Vadym\Desktop\furn-master\frontend\src\assets\images\collection\table-banner.jpg)no-repeat;}
-  
-  .sofa-collection:before,.sofa-collection:after {
-	position: absolute;
-	content: "";
-	top: 0;
-	left: 0;
-	height: 100%;
-	width: 33.4%;
-	background: rgba(51,59,62,.95);
-  }
-  .sofa-collection:after {
-	background: rgba(106,119,129,.3);
-	left: auto;
-	right: 0;
-	width: 66.6%;
-  }
-  .sofa-collection-txt {
-	position: relative;
-	max-width: 596px;
-	z-index: 1;
-  }
-  .sofa-collection-txt h2 {
-	font-size: 30px;
-	color: #fff;
-	font-weight: 700;
-  }
-  .sofa-collection-txt h4 {
-	font-size: 16px;
-	color: #fff;
-	font-weight: 700;
-  }
-  .sofa-collection-txt h4 span{color: #e99c2e;}
-  .sofa-collection-txt p {
-	font-size: 16px;
-	color: #fff;
-	font-weight: 500;
-	margin: 25px 0 10px;
-  }
-  .sofa-collection-price { margin-bottom: 3px;}
-  
-  .btn-cart.welcome-add-cart.sofa-collection-btn{height: 50px;line-height: 50px;}
   
   /*-------------------------------------
 		7. Features
@@ -694,16 +545,7 @@ font-family: 'Roboto', sans-serif;
   .single-blog:hover .single-blog-txt h2 a{color: #e99c2e;}
   /*.single-blog*/
   
-  /*-------------------------------------
-		9. Clients
-  --------------------------------------*/
-  .clients {
-	background: #f8f9fd;
-	display: flex;
-	align-items: center;
-	height: 220px;
-  }
-  .clients .item {text-align: center;}
+  
   /*-------------------------------------
 		10. News-letter
   --------------------------------------*/
@@ -846,4 +688,31 @@ font-family: 'Roboto', sans-serif;
 	0%   {bottom:0px;}
 	100%  {bottom:7px;}
   }
-  /*========================Thank you=================*/
+
+
+  @media only screen and (max-width: 768px) {
+	.catalog-img {
+		max-width: 100%;
+	}
+
+	.single-item {
+		margin-bottom: 20px;
+		text-align: center;
+	}
+	.single-item-bg {
+		position: relative;
+		min-height: 90%;
+		max-width: 90%;
+		background: #f8f9fc;
+		display: flex;
+		align-items: center;
+		justify-content:center;
+		overflow:hidden;
+		margin: 0 auto;
+	}
+	.single-item-bg img{
+		width: 75%;
+
+  }
+
+}
