--- a/src/App.css
+++ b/src/App.css
@@ -176,8 +176,8 @@
   
   /*badge*/
   .badge {
-	background-color: #e99c2e;
-	border: 2px solid #e99c2e;
+	background-color: #de2a1b!important;
+	border: 2px solid #de2a1b!important;
   }
   .attr-nav > ul > li > a span.badge {
 	margin-top: -25px;
@@ -227,77 +227,7 @@
 
   .header-area{position: absolute;top:0;left:0;width: 100%;z-index: 99;}
   
-  /*welcome-hero-content*/
-  .single-welcome-hero{
-	display: flex;
-	align-items: center;
-	flex-direction: column;
-	justify-content: center;
-	height: 920px;
-  }
-  .welcome-hero-txt h4 {
-	color: #998d80;
-	font-size: 24px;
-	font-weight: 400;
-  }
-  .welcome-hero-txt h2 {
-	font-size: 48px;
-	color: #616060;
-	font-weight: 400;
-	margin: 20px 0 22px;
-  }
-  .welcome-hero-txt p{margin: 35px 0 20px;}
-  .welcome-hero-txt .packages-price p {
-	margin: 0;
-	padding-left: 35px;
-  }
-  .packages-price p:before {
-	position:  absolute;
-	content:  "";
-	width:  25px;
-	height:  1px;
-	background:  #616060;
-	top: 45%;
-	left: 0;
-  }
-  .btn-cart.welcome-add-cart,.btn-cart.welcome-add-cart.welcome-more-info {
-	width: 170px;
-	height: 60px;
-	line-height: 60px;
-	border-radius: 1px;
-	font-size: 16px;
-	font-weight: 500;
-	display: inline-block;
-	margin-top: 34px;
-	-webkit-transition: 0.3s linear; 
-	-moz-transition: 0.3s linear; 
-	-ms-transition: 0.3s linear; 
-	-o-transition: 0.3s linear; 
-	transition: 0.3s linear;
-  }
-  .btn-cart.welcome-add-cart span {text-transform:  lowercase;}
-  .btn-cart.welcome-add-cart span.lnr.lnr-plus-circle {
-	position:  relative;
-	top: 0px;
-	font-size: 16px;
-	margin-right: 5px;
-  }
-  .btn-cart.welcome-add-cart.welcome-more-info{
-	color: #e99c2e;
-	background: transparent;
-	border:transparent;
-  }
-  .btn-cart.welcome-add-cart:hover{
-	color: #e99c2e;
-	background: transparent;
-	border: 1px solid #e99c2e;
-  }
-  .btn-cart.welcome-add-cart.welcome-more-info:hover{
-	background: transparent;
-	color: #e99c2e;
-	border: 1px solid #e99c2e;
-  }
-  /*welcome-hero-content*/
+
 
   /* fullscreen-image atart */
 
