--- a/src/components/ShopingSection/ShopingSection.css
+++ b/src/components/ShopingSection/ShopingSection.css
@@ -25,8 +25,8 @@
 	justify-content: center;
   }
   
-  .product-name-home {
-
+  .product-name-home:hover a {
+	color: #cc7a00
   }
 
   .productRating {
@@ -104,7 +104,7 @@
 	font-size: 16px;
 	font-weight: 600;
   }
-  .single-item:hover h4 a{color:#e99c2e;}
+  /* .single-item:hover h4 a{color:#e99c2e;} */
 
 /* add to cart button start */
 
@@ -118,21 +118,50 @@
     margin-right: 20px;
   }
   
-  .add-to-cart {
-    font-size: 1.7rem;
-    padding: 0.5rem 2rem;
-    margin-left: 1rem;
-    border: none;
-    border-radius: 0.5rem;
-    background-color: #cc7a00;
-    color: white;
-    cursor: pointer;
+  .favorite {
+
+	background-image: url(../../assets/icons/1.png);
+	background-size: cover;
+	border-radius: 50%;
+	margin-left: 30px;
+	width: 50px;
+	height: 50px;
+	cursor: pointer;
+	transition: background-image .5s;
 
   }
+  
 
-  .add-to-cart:hover {
-    background-color: #cf2b02;
+
+  .favorite:active {
+background-image: url(../../assets/icons/2.png);
   }
+  
+.add-to-cart {
+	font-size: 2rem;
+	padding: 1rem 1.5rem;
+	margin-left: 0.5rem;
+	border: none;
+	border-radius: 0.5rem;
+	background-color: #cc7a00;
+	color: white;
+	cursor: pointer;
+	transition: 0.4s ease;
+  }
+  
+  .add-to-cart:hover, .add-to-cart:focus {
+	box-shadow: 0 0 0 0.2rem rgba(252, 186, 3,.45);
+	transform: translateY(-1px);
+	background-color: #cf2b02;
+  }
+  
+  .add-to-cart:active {
+	background-color: #cf2b02;
+	transform: translateY(1px);
+	box-shadow: none;
+  }
+  
+  
   
 /* add to cart button end */
   
