--- a/src/App.css
+++ b/src/App.css
@@ -15,500 +15,489 @@
 /*-------------------------------------
 		1.General css (Reset code)
 --------------------------------------*/
-*{
-	padding: 0;
-	margin: 0;
-  }
-  
-  *{
-  -webkit-box-sizing:border-box;
-  -moz-box-sizing:border-box;
-  -o-box-sizing:border-box;
-  -ms-box-sizing:border-box;
-  box-sizing:border-box;
-  }
-  body{
-  font-family: 'Roboto', sans-serif;
-  font-size:16px;
-  color:#a09e9c;
-  background: #fff;
-	max-width:1920px;
-	margin:0 auto;
-  overflow-x:hidden;
-  }
-  
-  a,a:hover,a:active,a:focus {
-  display:inline-block;
-  text-decoration:none;
-  color: #616060;
-  font-size:16px;
-  padding:0;
-	font-weight: 500;
-	
-  }
-  h1,h2,h3,h4,h5,h6 { 
-  margin: 0;
-  color:#5f5b57;
-	font-size: 18px;
-	font-weight: 500;
-  }
-  p {
-  margin: 0;
-  color:#a09e9c;
-  font-size:16px;
-	line-height: 1.8;
-  }
-  img{border:none;max-width:100%; height:auto;}
-  ul{
+* {
   padding: 0;
-	margin: 0 auto;
-	list-style: none;
-  }
-  ul li {
-  list-style: none;
-  
-  }
-  select,input,textarea,button{box-shadow:none;outline:0!important;}
-  button {background: transparent;border: 0;}
-  
-  html,body{height: 100%;}
-  
-  [placeholder]:focus::-webkit-input-placeholder {
-  -webkit-transition: opacity 0.3s 0.3s ease; 
-  -moz-transition: opacity 0.3s 0.3s ease; 
-  -ms-transition: opacity 0.3s 0.3s ease; 
-  -o-transition: opacity 0.3s 0.3s ease; 
-  transition: opacity 0.3s 0.3s ease; 
-  opacity: 0;
-  }
-  
-  /* section-header */
-  .section-header{
-	position: relative;
-	text-align: center;
-  }
-  .section-header h2{
-	font-size: 30px;
-	font-weight: 500;
-  }
-  .section-header h2 span{text-transform: lowercase;}
-  /* section-header */
-  
-  /*=============Style css=========*/
-  
-  /*-------------------------------------
-		2. Top-area
-  --------------------------------------*/
-  .top-area {
-    position: sticky;
-    top: 0;
-    left: 0;
-    width: 100%;
-	z-index: 9999;
+  margin: 0;
 }
 
-  /*.navbar-brand*/
-  .navbar-header a.navbar-brand,.navbar-header a.navbar-brand:hover,.navbar-header a.navbar-brand:focus {
-	display: inline-block;
-	color: #616060;
-	font-size: 24px;
-	font-weight: 500;
-	padding: 45px 0px;
-	text-transform:capitalize;
-  }
-  
-  .logo{  
-	margin-top: 8px;
-  }
-  
-  .navbar-header a.navbar-brand span{display: inline-block;color:#e99c2e;text-transform:capitalize;}
-  
-  .wrap-sticky nav.navbar.bootsnav.sticked .navbar-header a.navbar-brand,.wrap-sticky nav.navbar.bootsnav.sticked .navbar-header a.navbar-brand:hover,.wrap-sticky nav.navbar.bootsnav.sticked .navbar-header a.navbar-brand:focus {padding:30px 0px;}
-  /*.navbar-brand*/
-  
-  /*.nav li*/
-  nav.navbar.bootsnav ul.nav > li > a {
-	color: #616060;
-	font-size: 16px;
-	font-weight: 500;
-	text-transform: capitalize;
-	-webkit-transition: 0.3s linear; 
-	-moz-transition: 0.3s linear; 
-	-ms-transition: 0.3s linear; 
-	-o-transition: 0.3s linear; 
-	transition: 0.3s linear;
-  }
-  nav.navbar.bootsnav ul.nav > li > a {padding: 48px 25px;}
-  nav.navbar.bootsnav ul.nav > li > a:hover,nav.navbar.bootsnav ul.nav > li > a:focus{color: #e99c2e;}
-  nav.navbar.bootsnav ul.nav > li.active>a {color: #e99c2e;}
-  
+* {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  -o-box-sizing: border-box;
+  -ms-box-sizing: border-box;
+  box-sizing: border-box;
+}
 
-  .wrap-sticky nav.navbar.bootsnav.sticked ul.nav > li > a{padding:30px 25px;}
-  /*.nav li*/
-  
-  /*.menu-ui-design*/
-  .menu-ui-design{overflow-y:scroll;height: 350px;}
-  .menu-ui-design::-webkit-scrollbar {
-	width:5px;
-  }
-  .menu-ui-design::-webkit-scrollbar-track {
-	-webkit-box-shadow: inset 0 0 8px #000;
-  }
-  .menu-ui-design::-webkit-scrollbar-thumb {
-  background-color: #e99c2e;
-  }
-  /*.menu-ui-design*/
-  
-  /*.attr-nav*/
-  .attr-nav {
-	position: relative;
-	top:5px;
-  }
-  .attr-nav > ul > li > a {
-	color: #616060;
-	padding: 44px 15px;
-	font-size: 18px;
-	font-weight: 500;
-  }
-  .attr-nav > ul > li > a:hover{color: #e99c2e;}
-  .wrap-sticky nav.navbar.bootsnav.sticked .attr-nav > ul > li > a {padding:28px 15px;}
-  /*.attr-nav*/
-  
-  /*badge*/
-  .badge {
-	background-color: #de2a1b!important;
-	border: 2px solid #de2a1b!important;
-  }
-  .attr-nav > ul > li > a span.badge {
-	margin-top: -25px;
-	width: 20px;
-	height: 20px;
-	padding-top: 3px;
-  }
-  /*.badge*/
-  
-  /*.navbar-toggle */
-  nav.navbar.bootsnav .navbar-toggle {
-	position: relative;
-	background-color: transparent;
-	border: 1px solid #e99c2e;
-	padding: 10px;
-	top: 0;
-  }
-  nav.navbar.bootsnav .navbar-toggle i{color: #e99c2e;}
-  /*.navbar-toggle */
-  
-  
-  
-  /*.cart-list*/
+body {
+  font-family: 'Roboto', sans-serif !important;
+  font-size: 16px !important;
+  color: #a09e9c  !important;
+  background: #fff !important;
+  max-width: 1920px;
+  margin: 0 auto !important;
+  overflow-x: hidden;
+}
 
-  /*.cart-list*/
-  
-  /*.packages-price */
-  .packages-price p{
-	position: relative;
-	color: #616060;
-	font-size: 16px;
-	font-weight: 500;
-  }
-  .packages-price del,.packages-price span {
-	color: #bbb9b9;
-	font-size: 16px;
-	font-weight: 500;
-  }
-  .packages-price del{margin-left: 10px;}
-  /*.packages-price */
-  
-  
-  
-  /*-------------------------------------
-		3.  Welcome-hero
-  --------------------------------------*/
+a,
+a:hover,
+a:active,
+a:focus {
+  display: inline-block;
+  text-decoration: none;
+  color: #616060;
+  font-size: 16px;
+  padding: 0;
+  font-weight: 500;
 
-  .header-area{position: absolute;top:0;left:0;width: 100%;z-index: 99;}
-  
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin: 0;
+  color: #000000!important;
+  font-size: 18px;
+  font-weight: 500;
+}
+
+p {
+  margin: 0;
+  color: #a09e9c;
+  font-size: 16px;
+  line-height: 1.8;
+}
+
+img {
+  border: none;
+  max-width: 100%;
+  height: auto;
+}
+
+ul {
+  padding: 0;
+  margin: 0 auto;
+  list-style: none;
+}
+
+ul li {
+  list-style: none;
+
+}
+
+select,
+input,
+textarea,
+button {
+  box-shadow: none;
+  outline: 0 !important;
+}
+
+button {
+  background: transparent;
+  border: 0;
+}
+
+html,
+body {
+  height: 100%;
+}
+
+[placeholder]:focus::-webkit-input-placeholder {
+  -webkit-transition: opacity 0.3s 0.3s ease;
+  -moz-transition: opacity 0.3s 0.3s ease;
+  -ms-transition: opacity 0.3s 0.3s ease;
+  -o-transition: opacity 0.3s 0.3s ease;
+  transition: opacity 0.3s 0.3s ease;
+  opacity: 0;
+}
+
+/* section-header */
+.section-header {
+  position: relative;
+  text-align: center;
+}
+
+.section-header h2 {
+  font-size: 30px;
+  font-weight: 500;
+}
+
+.section-header h2 span {
+  text-transform: lowercase;
+}
+
+/* section-header */
+
+/*=============Style css=========*/
 
 
-  /* fullscreen-image atart */
 
-  .fullscreen-image {
-	position: relative!;
-	width: 100%!;
-	height: 90vh!;
-	display: flex!;
-	justify-content: center!;
-	align-items: center!;
-	z-index: 1!;
-	overflow: hidden!;
-	padding-top: -70.8px;
-  }
-  
-  .fullscreen-image img {
-	position: absolute!;
+.header-area {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 99;
+}
 
-	top: 0!;
-	left: 0!;
-	width: 100%!;
 
-  }
- 
-  
-  
+
+/* fullscreen-image atart */
+
+.fullscreen-image {
+  position: relative !;
+  width: 100% !;
+  height: 90vh !;
+  display: flex !;
+  justify-content: center !;
+  align-items: center !;
+  z-index: 1 !;
+  overflow: hidden !;
+  padding-top: -70.8px;
+}
+
+
+.fullscreen-image img {
+  position: absolute !;
+  top: 0 !;
+  left: 0 !;
+  width: 100% !;
+}
+
+
 
 /* fullscreen-image end */
 
-  
 
-  /*-------------------------------------
+
+/*-------------------------------------
 		4. Populer-post
   --------------------------------------*/
- 
-  /*-------------------------------------
+
+/*-------------------------------------
 		7. Features
   --------------------------------------*/
-  .feature {padding:110px 0 0px;}
-  
-  .feature-content,.blog-content{margin-top: 75px;}
-  .single-feature,.single-blog {margin-bottom:30px;}
-  
-  /*.single-feature-txt */
-  .single-feature-txt,.single-blog-txt{margin-top: 25px;}
-  .single-feature-txt p i {
-	color:  #efce4a;
-	margin-left:  5px;
-  }
-  span.spacial-feature-icon i {color:  #a9a9a9;}
-  span.feature-review {margin-left: 10px;}
-  .single-feature-txt p {font-size: 14px;}
-  .single-feature-txt h3 a ,.single-blog-txt h2 a{
-	color: #5f5b57;
-	margin: 10px 0px 15px;
-  }
-  .single-feature-txt h5 {
-	color:  #5f5b57;
-	font-weight:  400;
-  }
-  /*.single-feature-txt */
-  
-  /*-------------------------------------       
+.feature {
+  padding: 110px 0 0px;
+}
+
+.feature-content,
+.blog-content {
+  margin-top: 75px;
+}
+
+.single-feature,
+.single-blog {
+  margin-bottom: 30px;
+}
+
+/*.single-feature-txt */
+.single-feature-txt,
+.single-blog-txt {
+  margin-top: 25px;
+}
+
+.single-feature-txt p i {
+  color: #efce4a;
+  margin-left: 5px;
+}
+
+span.spacial-feature-icon i {
+  color: #a9a9a9;
+}
+
+span.feature-review {
+  margin-left: 10px;
+}
+
+.single-feature-txt p {
+  font-size: 14px;
+}
+
+.single-feature-txt h3 a,
+.single-blog-txt h2 a {
+  color: #5f5b57;
+  margin: 10px 0px 15px;
+}
+
+.single-feature-txt h5 {
+  color: #5f5b57;
+  font-weight: 400;
+}
+
+/*.single-feature-txt */
+
+/*-------------------------------------       
 		8.  Blog
   --------------------------------------*/
-  .blog {padding:80px 0;}
-  
-  /*.single-blog*/
-  .single-blog{
-	-webkit-transition: 0.3s linear; 
-	-moz-transition: 0.3s linear; 
-	-ms-transition: 0.3s linear; 
-	-o-transition: 0.3s linear; 
-	transition: 0.3s linear;
-  }
-  .single-blog-img{
-	position: relative;
-	overflow: hidden;
-	-webkit-transition: 0.3s linear; 
-	-moz-transition: 0.3s linear; 
-	-ms-transition: 0.3s linear; 
-	-o-transition: 0.3s linear; 
-	transition: 0.3s linear;
-  }
-  .single-blog-img img{
-	width:auto;
-	height:auto;
-	-webkit-transition: .3s linear;
-	-moz-transition: .3s linear;
-	-ms-transition: .3s linear;
-	-o-transition: .3s linear;
-	transition: .3s linear;
-  }
-  .single-blog:hover  img{
-	-webkit-transform:scale(1.3);
-	-moz-transform:scale(1.3);
-	-ms-transform:scale(1.3);
-	-o-transform:scale(1.3);
-	transform:scale(1.3);
-  }
-  .single-blog-img-overlay{
-	position: absolute;
-	content: "";
-	top: 0;
-	left: 0;
-	height: 100%;
-	width: 100%;
-	background: rgba(0,0,0,.3);
-	-webkit-transform:scale(0);
-	-moz-transform:scale(0);
-	-ms-transform:scale(0);
-	-o-transform:scale(0);
-	transform:scale(0);
-	-webkit-transition: .3s linear;
-	-moz-transition: .3s linear;
-	-ms-transition: .3s linear;
-	-o-transition: .3s linear;
-	transition: .3s linear;
-  }
-  .single-blog:hover .single-blog-img-overlay{
-	-webkit-transform:scale(1);
-	-moz-transform:scale(1);
-	-ms-transform:scale(1);
-	-o-transform:scale(1);
-	transform:scale(1);
-  }
-  .single-blog-txt h2 a{text-transform: initial;margin: 0 0 15px 0;}
-  .single-blog-txt h3,.single-blog-txt h3 a {
-	color: #bcb7b2;
-	font-size: 14px;
-	font-weight: 400;
-  }
-  .single-blog-txt h3 a {margin: 0;}
-  .single-blog-txt p {
-	font-size: 13px;
-	margin-top: 20px;
-	color: #95908b;
-  }
-  .single-blog:hover .single-blog-txt h2 a{color: #e99c2e;}
-  /*.single-blog*/
-  
-  
-  /*-------------------------------------
+.blog {
+  padding: 80px 0;
+}
+
+/*.single-blog*/
+.single-blog {
+  -webkit-transition: 0.3s linear;
+  -moz-transition: 0.3s linear;
+  -ms-transition: 0.3s linear;
+  -o-transition: 0.3s linear;
+  transition: 0.3s linear;
+}
+
+.single-blog-img {
+  position: relative;
+  overflow: hidden;
+  -webkit-transition: 0.3s linear;
+  -moz-transition: 0.3s linear;
+  -ms-transition: 0.3s linear;
+  -o-transition: 0.3s linear;
+  transition: 0.3s linear;
+}
+
+.single-blog-img img {
+  width: auto;
+  height: auto;
+  -webkit-transition: .3s linear;
+  -moz-transition: .3s linear;
+  -ms-transition: .3s linear;
+  -o-transition: .3s linear;
+  transition: .3s linear;
+}
+
+.single-blog:hover img {
+  -webkit-transform: scale(1.3);
+  -moz-transform: scale(1.3);
+  -ms-transform: scale(1.3);
+  -o-transform: scale(1.3);
+  transform: scale(1.3);
+}
+
+.single-blog-img-overlay {
+  position: absolute;
+  content: "";
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  background: rgba(0, 0, 0, .3);
+  -webkit-transform: scale(0);
+  -moz-transform: scale(0);
+  -ms-transform: scale(0);
+  -o-transform: scale(0);
+  transform: scale(0);
+  -webkit-transition: .3s linear;
+  -moz-transition: .3s linear;
+  -ms-transition: .3s linear;
+  -o-transition: .3s linear;
+  transition: .3s linear;
+}
+
+.single-blog:hover .single-blog-img-overlay {
+  -webkit-transform: scale(1);
+  -moz-transform: scale(1);
+  -ms-transform: scale(1);
+  -o-transform: scale(1);
+  transform: scale(1);
+}
+
+.single-blog-txt h2 a {
+  text-transform: initial;
+  margin: 0 0 15px 0;
+}
+
+.single-blog-txt h3,
+.single-blog-txt h3 a {
+  color: #bcb7b2;
+  font-size: 14px;
+  font-weight: 400;
+}
+
+.single-blog-txt h3 a {
+  margin: 0;
+}
+
+.single-blog-txt p {
+  font-size: 13px;
+  margin-top: 20px;
+  color: #95908b;
+}
+
+.single-blog:hover .single-blog-txt h2 a {
+  color: #e99c2e;
+}
+
+/*.single-blog*/
+
+
+/*-------------------------------------
 		10. News-letter
   --------------------------------------*/
-  .newsletter{padding-top: 15px;}
-  
-  .hm-footer-widget{margin-bottom: 30px;}
-  .hm-foot-title h4 {
-	font-size: 18px;
-	font-weight: 700;
-	margin-bottom: 45px;
-  }
-  .hm-foot-menu ul li a {
-	color: #a09e9c;
-	font-size: 16px;
-	font-weight: 400;
-	margin-bottom: 15px;
-	-webkit-transition: .3s; 
-	-moz-transition:.3s; 
-	-ms-transition:.3s; 
-	-o-transition:.3s;
-	transition: .3s;
-  }
-  .hm-foot-menu ul li a:hover{
-	color: #e99c2e;
-	-webkit-transform:translateX(10px);
-	-moz-transform:translateX(10px);
-	-ms-transform:translateX(10px);
-	-o-transform:translateX(10px);
-	transform:translateX(10px);
-  }
-  .hm-foot-para p {
-	font-size: 14px;
-	text-transform: initial;
-	margin-bottom: 25px;
-  }
-  
-  /*hm-foot-email*/
-  .hm-foot-email{position: relative;}
-  .foot-email-box .form-control {
-	background:#fff;
-	display: block;
-	padding:25px 15px;
-	outline:0!important;
-	box-shadow:0 5px 15px rgba(0,0,0,.2);
-	border:0;
-  }
-  .foot-email-box input[type="text"]{
-	font-size: 14px;
-	color: #bcb7b2;
-  }
-  .foot-email-subscribe {
-	position: absolute;
-	top: 0;
-	right: 0;
-	width: 50px;
-	height: 100%;
-	background: transparent;
-	color: #e99c2e;
-	font-size: 22px;
-	display: flex;
-	align-items: center;
-	justify-content: center;
-  }
-  .foot-email-box .form-control:hover{
-	box-shadow:0 5px 15px rgba(0,0,0,.4);
-  }
-  /*hm-foot-email*/
-  
-  
-  /*-------------------------------------
+.newsletter {
+  padding-top: 15px;
+}
+
+.hm-footer-widget {
+  margin-bottom: 30px;
+}
+
+.hm-foot-title h4 {
+  font-size: 18px;
+  font-weight: 700;
+  margin-bottom: 45px;
+}
+
+.hm-foot-menu ul li a {
+  color: #a09e9c;
+  font-size: 16px;
+  font-weight: 400;
+  margin-bottom: 15px;
+  -webkit-transition: .3s;
+  -moz-transition: .3s;
+  -ms-transition: .3s;
+  -o-transition: .3s;
+  transition: .3s;
+}
+
+.hm-foot-menu ul li a:hover {
+  color: #e99c2e;
+  -webkit-transform: translateX(10px);
+  -moz-transform: translateX(10px);
+  -ms-transform: translateX(10px);
+  -o-transform: translateX(10px);
+  transform: translateX(10px);
+}
+
+.hm-foot-para p {
+  font-size: 14px;
+  text-transform: initial;
+  margin-bottom: 25px;
+}
+
+/*hm-foot-email*/
+.hm-foot-email {
+  position: relative;
+}
+
+.foot-email-box .form-control {
+  background: #fff;
+  display: block;
+  padding: 25px 15px;
+  outline: 0 !important;
+  box-shadow: 0 5px 15px rgba(0, 0, 0, .2);
+  border: 0;
+}
+
+.foot-email-box input[type="text"] {
+  font-size: 14px;
+  color: #bcb7b2;
+}
+
+.foot-email-subscribe {
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 50px;
+  height: 100%;
+  background: transparent;
+  color: #e99c2e;
+  font-size: 22px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.foot-email-box .form-control:hover {
+  box-shadow: 0 5px 15px rgba(0, 0, 0, .4);
+}
+
+/*hm-foot-email*/
+
+
+/*-------------------------------------
 		11. Footer
   --------------------------------------*/
-  .footer {
-	background: #f8f9fd;
-	display: flex;
-	align-items: center;
-	height: 154px;
-  }
-  .hm-footer-copyright p,.hm-footer-copyright p a {
-	color: #a5adb3;
-	font-size: 14px;
-	font-weight: 400;
-  }
-  .footer-social a i {
-	color: #a4aaaf;
-	margin: 0 18px 24px 0;
-	-webkit-transition: .3s; 
-	-moz-transition:.3s; 
-	-ms-transition:.3s; 
-	-o-transition:.3s;
-	transition: .3s;
-  }
-  .footer-social i:hover{color: #e99c2e;}
-  
-  /*===============================
+.footer {
+  background: #f8f9fd;
+  display: flex;
+  align-items: center;
+  height: 154px;
+}
+
+.hm-footer-copyright p,
+.hm-footer-copyright p a {
+  color: #a5adb3;
+  font-size: 14px;
+  font-weight: 400;
+}
+
+.footer-social a i {
+  color: #a4aaaf;
+  margin: 0 18px 24px 0;
+  -webkit-transition: .3s;
+  -moz-transition: .3s;
+  -ms-transition: .3s;
+  -o-transition: .3s;
+  transition: .3s;
+}
+
+.footer-social i:hover {
+  color: #e99c2e;
+}
+
+/*===============================
 	Scroll Top
   ===============================*/
-  #scroll-Top  .return-to-top {
-	position: fixed;
-	right: 30px;
-	bottom: 30px;
-	display: none;
-	width: 40px;
-	line-height: 40px;
-	height: 40px;
-	text-align: center;
-	font-size: 20px;
-	cursor: pointer;
-	color: #fff;
-	background:#e99c2e;
-  border:1px solid #e99c2e;
-  border-radius:50%;
-  -webkit-transition: .5s; 
-  -moz-transition:.5s; 
-  -ms-transition:.5s; 
-  -o-transition:.5s;
-	transition: .5s;
+#scroll-Top .return-to-top {
+  position: fixed;
+  right: 30px;
+  bottom: 30px;
+  display: none;
+  width: 40px;
+  line-height: 40px;
+  height: 40px;
+  text-align: center;
+  font-size: 20px;
+  cursor: pointer;
+  color: #fff;
+  background: #e99c2e;
+  border: 1px solid #e99c2e;
+  border-radius: 50%;
+  -webkit-transition: .5s;
+  -moz-transition: .5s;
+  -ms-transition: .5s;
+  -o-transition: .5s;
+  transition: .5s;
   z-index: 2;
+}
+
+#scroll-Top .return-to-top:hover {
+  background: #fff;
+  color: #e99c2e;
+  border: 1px solid #e99c2e;
+}
+
+#scroll-Top .return-to-top i {
+  position: relative;
+  bottom: 0;
+
+}
+
+#scroll-Top .return-to-top i {
+  position: relative;
+  animation-name: example;
+  animation-direction: alternate;
+  animation-iteration-count: infinite;
+  animation-duration: 1s;
+}
+
+@keyframes example {
+  0% {
+    bottom: 0px;
   }
-  #scroll-Top  .return-to-top:hover {
-	background:#fff;
-	color: #e99c2e;
-  border:1px solid #e99c2e;
+
+  100% {
+    bottom: 7px;
   }
-  
-  #scroll-Top  .return-to-top i{
-	position:relative;
-	bottom:0;
-  
-  }
-  
-  #scroll-Top  .return-to-top i{
-	position: relative;
-	animation-name: example;
-	animation-direction: alternate;
-	animation-iteration-count: infinite;
-	animation-duration:1s;
-  }
-  @keyframes example {
-	0%   {bottom:0px;}
-	100%  {bottom:7px;}
-  }
+}
