--- a/src/screens/NotFoundPage/NotFoundPage.module.css
+++ b/src/screens/NotFoundPage/NotFoundPage.module.css
@@ -1,4 +1,4 @@
-@import url(https://fonts.googleapis.com/css?family=Roboto:400,100,300,500);
+@import url('https://fonts.googleapis.com/css?family=Roboto:400,100,300,500');
 
 .notFoundPage { 
   background-color: #007aff; 
