--- a/src/App.css
+++ b/src/App.css
@@ -43,9 +43,8 @@ a:hover,
 a:active,
 a:focus {
   display: inline-block;
-  text-decoration: none;
-  color: #616060;
-  font-size: 16px;
+  text-decoration: none!important;
+  font-size: 20px;
   padding: 0;
   font-weight: 500;
 
