--- a/src/App.css
+++ b/src/App.css
@@ -31,7 +31,6 @@
 body {
   font-family: 'Roboto', sans-serif !important;
   font-size: 16px !important;
-  color: #a09e9c  !important;
   background: #fff !important;
   max-width: 1920px;
   margin: 80px auto auto auto !important;
@@ -64,7 +63,7 @@ h6 {
 
 p {
   margin: 0;
-  color: #a09e9c;
+  color: #3f3f3f;
   font-size: 16px;
   line-height: 1.8;
 }
