--- a/src/components/ShopingSection/ShopingSection.css
+++ b/src/components/ShopingSection/ShopingSection.css
@@ -1,3 +1,10 @@
+.sorting-section {
+	justify-content: flex-end;
+    display: flex;
+	padding-top: 20px;
+  }
+
+
 .catalog {padding:0px 0 70px;}
 .catalog-content{margin-top: 80px;}
 
